@@ -9,8 +9,6 @@ import com.navi.accommodation.repository.AccRepository;
 import com.navi.image.domain.Image;
 import com.navi.image.repository.ImageRepository;
 import com.navi.location.repository.TownshipRepository;
-import com.navi.room.domain.Room;
-import com.navi.room.dto.response.RoomResponseDTO;
 import com.navi.room.repository.RoomRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -24,7 +22,8 @@ import java.util.stream.Collectors;
 @Slf4j
 @RequiredArgsConstructor
 @Transactional
-public class AccServiceImpl implements AccService{
+public class AccServiceImpl implements AccService {
+
     private final AccRepository accRepository;
     private final RoomRepository roomRepository;
     private final TownshipRepository townshipRepository;
@@ -33,7 +32,13 @@ public class AccServiceImpl implements AccService{
     /* === 관리자 전용 CRUD === */
     @Override
     public Acc createAcc(AccRequestDTO dto) {
-        Acc acc = Acc.builder().build();
+        Long nextSeq = accRepository.getNextSeqVal(); // ✅ Oracle 시퀀스 호출
+        String accId = String.format("ACC%03d", nextSeq);
+
+        Acc acc = Acc.builder()
+                .accNo(nextSeq)
+                .accId(accId)
+                .build();
         acc.changeFromRequestDTO(dto);
         return accRepository.save(acc);
     }
@@ -44,7 +49,7 @@ public class AccServiceImpl implements AccService{
                 .orElseThrow(() -> new IllegalArgumentException("숙소가 존재하지 않습니다."));
 
         // API 숙소 수정 불가
-        if(acc.getContentId() != null) {
+        if (acc.getContentId() != null) {
             throw new IllegalStateException("API로 받아온 숙소는 수정할 수 없습니다.");
         }
         acc.changeFromRequestDTO(dto);
@@ -57,11 +62,11 @@ public class AccServiceImpl implements AccService{
                 .orElseThrow(() -> new IllegalArgumentException("숙소가 존재하지 않습니다."));
 
         // API 숙소 삭제 불가
-        if(acc.getContentId() != null) {
+        if (acc.getContentId() != null) {
             throw new IllegalStateException("API로 받아온 숙소는 삭제할 수 없습니다.");
         }
         // 예약사항이 있으면 삭제 불가
-        if(!acc.isDeletable()) {
+        if (!acc.isDeletable()) {
             throw new IllegalStateException("삭제 불가 상태의 숙소입니다.");
         }
 
@@ -77,40 +82,41 @@ public class AccServiceImpl implements AccService{
 
     /* === 사용자 전용 조회 === */
     @Override
+    @Transactional(readOnly = true)
     public List<AccListResponseDTO> searchAccommodations(AccSearchRequestDTO dto) {
         List<Acc> accList = accRepository.findAll();
 
         // 검색 조건 분기
-        if(dto.getTownshipName() != null && !dto.getTownshipName().isBlank()) {
+        if (dto.getTownshipName() != null && !dto.getTownshipName().isBlank()) {
             accList = accList.stream()
                     .filter(a -> a.getTownship() != null &&
                             a.getTownship().getTownshipName().contains(dto.getTownshipName()))
                     .toList();
-        }
-        else if(dto.getTitle() != null && !dto.getTitle().isBlank()) {
+        } else if (dto.getTitle() != null && !dto.getTitle().isBlank()) {
             String lowerKeyword = dto.getTitle().toLowerCase();
             accList = accList.stream()
                     .filter(a -> a.getTitle() != null && a.getTitle().toLowerCase().contains(lowerKeyword))
                     .toList();
-        }
-        else {
-            // Todo: 임시방편 (이거 말고 관광지 기반 만들어야 함)
-            accList = accRepository.findAll();
+        } else {
+            accList = accRepository.findAll(); // TODO: 명소 기반 검색 추가 예정
         }
 
-        /* 숙소 + 이미지 + 객실정보 DTO 조합 */
+        /* 숙소 + 이미지 DTO 조합 */
         return accList.stream().map(acc -> {
-            String accImage = imageRepository
-                    .findTopByTargetTypeAndTargetIdOrderByNoAsc("ACC", acc.getAccId())
+            // ✅ 대표 이미지 경로 (/images/acc/uuid.jpg)
+            String accImagePath = imageRepository
+                    .findTopByTargetTypeAndTargetIdOrderByNoAsc("ACC", acc.getAccId().trim())
                     .map(Image::getPath)
-                    .orElse("/uploads/default_hotel.jpg");
+                    .orElse("/images/acc/default_hotel.jpg"); // ✅ 기본 이미지도 동일 구조로 변경
 
-            // TODO: 예약 가능한 객실 중 최저가 계산 (추후 구현)
+            // ✅ 로그로 실제 반환 확인
+            log.debug("[ACC_IMAGE] {} → {}", acc.getAccId(), accImagePath);
+
             return AccListResponseDTO.builder()
                     .accId(acc.getAccId())
                     .title(acc.getTitle())
                     .address(acc.getAddress())
-                    .accImage(accImage)
+                    .accImage(accImagePath)
                     .build();
         }).toList();
     }
@@ -121,24 +127,21 @@ public class AccServiceImpl implements AccService{
         Acc acc = accRepository.findByAccId(accId)
                 .orElseThrow(() -> new IllegalArgumentException("숙소를 찾을 수 없습니다."));
 
-        // 숙소 이미지 리스트
-        List<String> accImages = imageRepository.findImagesIgnoreCase("ACC", acc.getAccId())
+        // ✅ 숙소 이미지 리스트
+        List<String> accImages = imageRepository
+                .findAllByTargetTypeAndTargetId("ACC", acc.getAccId())
                 .stream()
-                .map(Image::getPath)
-                .toList();
+                .map(Image::getPath) // DB 저장값 그대로 사용 (/images/acc/uuid.jpg)
+                .collect(Collectors.toList());
 
-        log.info("[IMAGE-DEBUG] ACC {} 이미지 조회 결과 = {}", acc.getAccId(),
-                imageRepository.findAllByTargetTypeAndTargetIdIgnoreCase("ACC", acc.getAccId()).size());
+        if (accImages.isEmpty()) {
+            accImages = List.of("/images/acc/default_hotel.jpg");
+        }
 
-        // 객실 리스트
-        /*List<RoomResponseDTO> roomList = roomRepository.findByAcc_AccId(acc.getAccId())
-                .stream()
-                .map(RoomResponseDTO::fromEntity)
-                .toList();*/
+        log.debug("[ACC_DETAIL] {} 이미지 개수 = {}", acc.getAccId(), accImages.size());
 
         AccDetailResponseDTO dto = AccDetailResponseDTO.fromEntity(acc);
         dto.setAccImages(accImages);
-        //dto.setRooms(roomList);
 
         return dto;
     }
